# scrapy_cffi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/usage/: 0-settings.md  1-spiders.md  2-internet.md  3-interceptors.md  4-pipelines.md  5-run.md  6-extensions.md  7_databases.md  _Start.md
scrapy_cffi/: crawler.py
scrapy_cffi/commands/: demo.py
scrapy_cffi/core/: engine.py  tasks.py
scrapy_cffi/core/downloader/: fetch.py
scrapy_cffi/core/downloader/internet/: request.py
scrapy_cffi/core/scheduler/: base.py
scrapy_cffi/databases/: mongodb.py  mysql.py  redis.py
scrapy_cffi/models/: databases.py  settings.py
scrapy_cffi/pipelines/: api.py  base.py
scrapy_cffi/templates/demo_spider/: __init__.py
scrapy_cffi/templates/server/: readme.txt
scrapy_cffi/templates/server/demo_server/: fastApiServer.py  ws_server.py
scrapy_cffi/templates/spiders/: runner.py  settings.py
scrapy_cffi/templates/task/: export_interface.py  manager.py
scrapy_cffi/templates/task/_action_core/: baseManager.py  coreBase.py  coreFlow.py  reqBase.py
scrapy_cffi/templates/task/action_base/: collect_base.py  function_base.py
scrapy_cffi/templates/task/action_flow/: collect.py  function_flow.py
scrapy_cffi/templates/task/component/: midManager.py
scrapy_cffi/templates/task/utils/: algorithm.py
scrapy_cffi/utils/: common.py  media.py  scrapyRunner.py
tests/: readme.md
